# project-format

./: Cargo.toml  README.md  project-erp.yml  project-origin.yml  project-tenant.yml  project-weimob.yml  project.yml
examples/: hbs_helper.rs  json_path.rs  slot_regex.rs  templatedir.rs
src/: config.rs  log.rs  main.rs  render.rs
src/parser/: gen_file_name.pest  gen_file_name.rs  mod.rs  oracle_sql.pest  oracle_sql.rs
src/render/: mod.rs
src/test/: create_table.sql  (+1 more)
templates/guava/: .env  .env-prd  .gitignore  Cargo.toml  deploy.sh
templates/guava/.github/workflows/: rust.yml
templates/guava/amis-src/: nginx.conf  package.json  vite.config.ts
templates/guava/amis-src/src/: App.tsx  index.tsx
templates/guava/amis-src/src/pages/: index.ts
templates/guava/amis-src/src/pages/schema/: userSchema.ts  {camel tables;name}Schema.ts
templates/guava/amis-src/src/pages/schema/columns/: {camel tables;name}Columns.ts
templates/guava/amis-src/src/pages/schema/create/: {camel tables;name}Create.ts
templates/guava/amis-src/src/pages/schema/update/: {camel tables;name}Update.ts
templates/guava/db/: V1__initial.sql  V2__initial.sql  {snake tables;name}.sql
templates/guava/migrations/: V1__initial.sql  V2__initial.sql
templates/guava/rbdc-oracle/: Cargo.toml
templates/guava/rbdc-oracle/src/: decode.rs  options.rs
templates/guava/sql/: test.sql
templates/guava/src/: main.rs
templates/guava/src/drivers/: cache.rs  db.rs  log.rs  mod.rs  redis.rs  session.rs
templates/guava/src/entities/: mod.rs  {snake tables;name}_bo.rs  {snake tables;name}_opt_bo.rs
templates/guava/src/macros/repository/: mod.rs
templates/guava/src/repository/: mod.rs  {lower tables;name}_repo.rs  {snake tables;name}_repo.rs
templates/guava/src/server/: auth.rs  error.rs  mod.rs  query.rs
templates/guava/src/server/api/: mod.rs
templates/guava/src/server/api/commands/: mod.rs  {lower tables;name}_controller.rs  {snake tables;name}_controller.rs
templates/guava/src/server/api/model/: mod.rs  {lower tables;name}_create_vo.rs  {lower tables;name}_opt_vo.rs  {lower tables;name}_update_vo.rs  {lower tables;name}_vo.rs  {snake tables;name}_create_vo.rs  {snake tables;name}_opt_vo.rs  {snake tables;name}_update_vo.rs  {snake tables;name}_vo.rs
templates/guava/src/server/api/routes/: auth_routes.rs  mod.rs  root_routes.rs  {snake tables;name}_routes.rs
templates/guava/src/service/: mod.rs  {lower tables;name}_service.rs  {snake tables;name}_service.rs
(+122 files in other folders)
