[package]
name = "project-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
similar-asserts = "1.4.2"
handlebars = "4.3.4"
itertools = "0.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
serde_yaml = "0.9.13"
jsonpath-rust = "0.1.6"
convert_case = "0.6.0"
clap = {version = "3", features = ["derive"]}