[package]
name = "{{project_name}}"
version = "0.0.1"
edition = "2021"
description = "a fast development web application build with axum"
authors = ["Zerounary <zerounary@163.com>"]
license = "MIT"
keywords = ["web", "codegen", "template"]
repository = "https://github.com/Zerounary/{{project_name}}.git"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]


[dependencies]
axum = { version = "0.5.15", features = ["headers"]}
axum-extra = { version =  "0.3.7", features = ["spa"]}
tokio = { version =  "1.20.1", features = ["full"]}
tower-http = { version = "0.3.0", features = ["fs", "trace"] }

serde_json ={ version = "1.0.85"}
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
anyhow = { version = "1.0.62"}
lazy_static = "1.4.0"
dotenv = { version = "0.15.0"}
itertools = "0.10.2"  
struct-convert = "1.2.3"
url = "2.3.1"
smart-default = "0.6.0"
fastdate = "0.1.29"

moka = "0.9.3"
async-session = "3.0.0"
regex = "1.7.0"

rbs = "0.1.11"
rbatis = "4.0.39"
rbdc-pg = "0.1.16"
rbdc-mysql = "0.1.16"
rbdc-sqlite = "0.1.13"
refinery = { version = "0.8.6", features = ["mysql", "tokio-postgres"]}
tokio-postgres = "0.7.7"
mysql = "22.2.0"

redis = "0.22.1"
deadpool = "0.9.5"
deadpool-redis = {version =  "0.11.0", features = ["serde"]}


log = "0.4.17"
fast_log = {version =  "1.5", features = ["lz4","zip","gzip"]}